tests/run/errors/extern_missing_handler_err.anv
// @mode: run
// @expect: error
// @contains: missing extern implementation

extern fn foo() -> int;

fn main() {
    let x = foo();
}
